...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_page_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginStart="@dimen/title_margin"
            android:layout_marginEnd="@dimen/title_margin"
            android:text="@{model.titleText}"
            android:textColor="@color/black"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/machine_id_des_rest" />

        <ImageView
            android:id="@+id/nfc_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/nfc_margin_top"
            android:scaleType="fitXY"
            android:src="@drawable/nfc_pic"
            app:layout_constraintBottom_toTopOf="@+id/nfc_text"
...
