...

        <FrameLayout
            android:id="@+id/recycler_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{model.recyclerVisibility}"
            app:layout_constraintBottom_toTopOf="@+id/brew_button"
            app:layout_constraintTop_toBottomOf="@+id/type_page_title">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selection_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/selection_recycler_margin_side"
                android:layout_marginTop="@dimen/content_margin_top"
                android:layout_marginEnd="@dimen/selection_recycler_margin_side"
...
