...
    <string name="confirm">Confirm</string>
    <string name="previous">Previous</string>

    <string name="machine_id_des_rest">Tab the machine to start</string>
    <string name="machine_id_des_loading">Loading machine...</string>
    <string name="machine_id_des_error">Can not find machine, please try again</string>
    <string name="machine_id_des_success">Tab again to make new order now</string>
    <string name="show_ordered_history">Here can show your ordered history</string>
    <string name="history_order_des">History Orders: </string>
    <string name="current_order_des">This is what you just ordered: </string>

    <string name="use_description_title">How does this work</string>
    <string name="use_description">First you need to tab the central image to connect coffee machine. Then tab the central image again to start a coffee order</string>
...
