...
        android:layout_marginTop="@dimen/selection_icon_margin_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/size_medium" />

    <TextView
        android:id="@+id/item_edit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_height"
        android:layout_marginStart="@dimen/selection_icon_margin_left"
        android:layout_marginEnd="@dimen/selection_icon_margin_left"
        android:gravity="center_vertical"
        android:padding="@dimen/selection_item_edit_padding"
...
